# IITISoC-25-IVR07

./: README.md  output.avi  tracker_visualizer.py
fairmot_tracker/: package.xml  setup.cfg  setup.py
fairmot_tracker/config/: tracker_params.yaml
fairmot_tracker/fairmot_tracker/: tracker_node.py  visualizer_node.py
fairmot_tracker/launch/: tracker_launch.py
yolo_detector/: README.md  bagpy_test.py  frame_extraction.py  frame_to_video.py  package.xml  pyproject.toml  requirements.txt  rosbag_test.py  setup.py  test_video.py  test_yolo_local.py
yolo_detector/train_yolo/: detection.py  run_finetuning.py  training.py
yolo_detector/yolo_detector/: yolo_node.py  yolo_node1.py  yolo_node_nodepth,py
yolov8_realsense/: package.xml  setup.cfg  setup.py
yolov8_realsense-better_tracking/: package.xml  setup.py
yolov8_realsense-better_tracking/launch/: yolov8_detection.launch.py  yolov8_tracking.launch.py  yolov8_tracking_3d.launch.py
yolov8_realsense-better_tracking/yolov8_realsense/: __init__.py  yolov8_detector_node.py  yolov8_tracker_node.py
yolov8_realsense/config/: yolov8_params.yaml
yolov8_realsense/launch/: yolov8_tracking.launch.py
yolov8_realsense/resource/: yolov8_realsense
yolov8_realsense/yolov8_realsense/: yolov8_detector_node.py  yolov8_tracker_node.py
